# PythonProject_attempt_2

./: .coverage  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_data_readers_py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_decorators_test_py.html  z_a44f0ac069e85531_generators_test_py.html  z_a44f0ac069e85531_masks_test_py.html  z_a44f0ac069e85531_processing_test_py.html  z_a44f0ac069e85531_test_all_py.html  z_a44f0ac069e85531_test_py.html  z_a44f0ac069e85531_widget_test_py.html
src/: data_readers.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  services.py  utils.py  widget.py
tests/: conftest.py  data_readers_test.py  decorators_test.py  external_api_test.py  generators_test.py  masks_test.py  processing_test.py  services_test.py  test.py  test_all.py  utils_test.py  widget_test.py
