[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Eugen <trushin00332211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
poetry-core = "^2.3.1"
python-dotenv = "^1.2.2"
pandas = "^2.2"
openpyxl = "^3.1"
requests = "^2.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119
